2014-04-08         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.1: Release tar ball made.

2014-04-04         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am: Prettify list of tests a little bit.

2014-04-03         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): Add readfile2.ok. Oops.

2014-03-27         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (readfile2): New test.
	* readfile2.awk, readfile2.ok: New files.

2014-02-28         Arnold D. Robbins     <arnold@skeeve.com>

	* regrange.ok: Update after code improvements.

2014-02-03         Stepan Kasal         <kasal@ucw.cz>

	* strftime.awk: the default format uses %e, not %d (Introduced on
	2014-01-16; the previous code mangled the output of command "date"
	to match %d.) Remove the "mucking" for cygwin, it's obsolete and
	incompatible with %e.

2014-01-28         Eli Zaretskii        <eliz@gnu.org>

	* strftime.awk: If DATECMD variable is non-empty, use it instead
	of the literal "date" as the 'date'-like command.

2014-01-19         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (mpfrnegzero): New test.
	* mpfrnegzero.awk, mpfrnegzero.ok: New files.

2014-01-17         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (readdir): Run ls commands outside the awk script.
	* readdir0.awk: Read ls results from files. Helps with MinGW.
	Thanks to Eli Zaretskii for the problem report.

2014-01-17         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am: Quote instances of $(top_srcdir) also.

2014-01-16         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (strftime): Remove comment about the race condition, since
	this should be fixed.  And gawk now calls date inside the script.
	* strftime.awk: Based on an idea from Pat Rankin, fix the race
	condition by looping repeatedly over strftime/date/strftime until
	the before and after strftime results match.  That should fix